Add simple tabular detector

--- a/.gitignore
+++ b/.gitignore
@@ -128,8 +128,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-resources/*.png
-resources/*.jpeg
-resources/*.jpg
-resources/token
-tmp*
+resources
+token
+.vscode
